--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<div id="main"></div>
 	</body>
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-  <script src="index.js"></script>
   <script src="pwd.js"></script>
+  <script>
+    pwdBox({container:"#main"});
+  </script>
 </html>
